# ZeriReplEngine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.ps1  build.sh  dev.ps1  dev.sh  install.ps1  install.sh  installer.iss  metalanguageTechnicalSpecification.md  setup.ps1  setup.sh  vcpkg-lock.json  vcpkg.json
.github/: copilot-instructions.md  duplicate-utility-baseline.txt
.github/workflows/: ci.yml  release.yml
.zeri/: state.json
cmake/: embedded_catalog_assets.h.in  version.h.in
docs/: error-codes.md  manual-test-checklist.md  performance.md  plugin-manifest-schema.json  plugin-sdk.md
docs/user-guide/: context-reference.md  getting-started.md  sandbox.md  script-editor.md
engine/src/bridge/: ZeriWireSidecarBridge.cpp  ZeriWireSidecarBridge.h
examples/plugin-hello/: CMakeLists.txt  README.md  plugin.json  plugin_hello.cpp
help/: help_catalog.json
include/yuumi/: bridge.hpp  diagnostic.hpp  protocol.hpp  transport.hpp  types.hpp
runtime/: bootstrap_bun.js  bootstrap_lua.lua  bootstrap_python.py  bootstrap_ruby.rb  runtime_manifest.json
src/: main.cpp
src/Core/Include/: AppPaths.h  BugSnapshot.h  CatalogRegistry.h  ContextManager.h  HelpCatalog.h  InterruptException.h  RuntimeState.h  StartupDiagnostics.h  StringUtils.h  Strings.h  SystemGuard.h  ThreadSafeQueue.h  UserPaths.h  VariableScope.h  WizardStrings.h
src/Core/Source/: AppPaths.cpp  BugSnapshot.cpp  CatalogRegistry.cpp  ContextManager.cpp  HelpCatalog.cpp  RuntimeState.cpp  StartupDiagnostics.cpp  SystemGuard.cpp  UserPaths.cpp  VariableScope.cpp
src/Engine/Include/: ExecutionResult.h  InputProcessor.h  ReplEngine.h
src/Engine/Source/: InputProcessor.cpp  ReplEngine.cpp
src/Engines/Include/: BaseContext.h  BuiltinExecutor.h  CachedDispatcher.h  Command.h  CompletionEngine.h  ContextCommandExecutor.h  ContextUtils.h  CustomCommandContext.h  DefaultDispatcher.h  ExecutionResult.h  ExecutorUtils.h  ExpressionExecutor.h  GlobalCommandRegistry.h  GlobalContext.h  JsContext.h  JsExecutor.h  LuaContext.h  LuaExecutor.h  LuaExecutorStub.h  LuaPluginLoader.h  MathContext.h  MetaLanguageParser.h  MetaParser.h  PluginLoader.h  ProcessBridge.h  PythonContext.h  PythonExecutor.h  RubyContext.h  RubyExecutor.h  SandboxContext.h  ScriptEditorContext.h  ScriptHubContext.h  ScriptRegistry.h  SetupContext.h  SimpleParser.h  StandardDispatcher.h  ZeriPluginABI.h
src/Engines/Include/Interface/: IContext.h  IDispatcher.h  IExecutor.h  IParser.h  IProcessBridge.h
src/Engines/Source/: BuiltinExecutor.cpp  CachedDispatcher.cpp  CompletionEngine.cpp  ContextCommandExecutor.cpp  CustomCommandContext.cpp  DefaultDispatcher.cpp  ExpressionExecutor.cpp  GlobalContext.cpp  JsContext.cpp  JsExecutor.cpp  LuaContext.cpp  LuaExecutor.cpp  LuaExecutorStub.cpp  LuaPluginLoader.cpp  MathContext.cpp  MetaLanguageParser.cpp  MetaParser.cpp  PluginLoader.cpp  ProcessBridge.cpp  PythonContext.cpp  PythonExecutor.cpp  RubyContext.cpp  RubyExecutor.cpp  SandboxContext.cpp  ScriptEditorContext.cpp  ScriptHubContext.cpp  SetupContext.cpp  SimpleParser.cpp  StandardDispatcher.cpp
src/Extensions/Include/: ExtensionManager.h
src/Extensions/Source/: ExtensionManager.cpp
src/Interface/Include/: TerminalUi.h
src/Interface/Source/: TerminalUi.cpp
src/Modules/: test_script.lua
src/Modules/Include/: ModuleManager.h  ModuleManifest.h
src/Modules/Source/: ModuleManager.cpp
src/Tests/: HelpCatalogSmoke.cpp
src/Ui/Include/: BridgeProtocol.h  BridgeTerminal.h  FtxUiTerminal.h  ITerminal.h  OutputSink.h  TerminalUi.h
src/Ui/Source/: BridgeProtocol.cpp  BridgeTerminal.cpp  FtxUiTerminal.cpp  OutputSink.cpp  TerminalUi.cpp
src/ZeriLink/Include/: IProcessHost.h  PosixProcessHost.h  ProcessBridge.h  ScopedHandle.h  WindowsProcessHost.h  ZeriWireProtocol.h
src/ZeriLink/Runtime/: bootstrap_bun.js
src/ZeriLink/Source/: PosixProcessHost.cpp  ProcessBridge.cpp  WindowsProcessHost.cpp  ZeriWireProtocol.cpp
test/unit/: test_context_manager.cpp  test_meta_parser.cpp  test_runtime_state_shared.cpp  test_script_registry.cpp  test_variable_scope.cpp
ui/: go.mod  go.sum
ui/cmd/zeri-tui/: app_options.go  bootstrap_manager.go  bootstrap_manager_other.go  bootstrap_manager_windows.go  main.go  messages.go  model.go  onboarding_state.go  onboarding_state_test.go  persistence.go  preflight.go  preflight_other.go  preflight_test.go  preflight_windows.go  runtime_center.go  settings_center.go  settings_center_test.go  startup_flow.go
ui/internal/: bootstrap_manager_test.go
ui/internal/aicontext/: model.go
ui/internal/bootstrap/: bootstrap.go
ui/internal/bridge/: client.go  yuumi_client.go
ui/internal/onboarding/: model.go  model_test.go
ui/internal/persistence/: location_test.go  persistence.go  persistence_test.go
ui/internal/scripthub/: model.go
ui/internal/scripthub/examples/: example_js.js  example_lua.lua  example_python.py  example_ruby.rb
ui/internal/system/: memory.go
ui/internal/ui/: autocomplete.go  commands.go  errorcatalog.go  logo.go  message.go  messages.go  normalise.go  palette.go  scripteditor.go  statusbar.go
ui/pkg/catalog/: catalog.go  catalog_test.go
ui/pkg/catalog/data/: bridge_types_catalog.json  commands_catalog.json  errors_catalog.json  languages_catalog.json
ui/pkg/yuumi/: client.go  protocol.go  runner.go  transport_unix.go  transport_windows.go  types.go
ui/test/integration/: context_test.go  crosslang_test.go  executor_test.go  f5_manual_automation_test.go  helpers_test.go  mock_ai_server_test.go  protocol_server_unix_test.go  protocol_server_windows_test.go  protocol_test.go  session_test.go  smoke_test.go  startup_test.go
ui/test/integration/harness/: client.go  dial_unix.go  dial_windows.go  engine.go  response.go
